Fix heading size to 50% of viewport width
Was too big on mobile.

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@ html {
 h1 {
     color: #eee;
     font-family: sans-serif;
-    font-size: 3.2em;
+    width: 50%;
+    font-size: 5.9vw;
 }
 
 .hand {
